<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/planification_item"
            android:icon="@drawable/ic_agenda"
            android:title="@string/planification" />
        <item
            android:id="@+id/patient_item"
            android:icon="@drawable/ic_patient"
            android:title="@string/patients" />
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/ic_configuration"
            android:title="@string/settings" />
        <item
            android:id="@+id/log_out_item"
            android:icon="@drawable/ic_out"
            android:title="@string/log_out" />
    </group>

</menu>
