<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/tasklist_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:button="@drawable/ic_task_checkbox"
        android:fontFamily="@font/inter_regular"
        android:maxLines="1"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="Descripción de la tarea"
        android:textColor="@color/iris_100"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/patientList_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tasklist_description"
        android:fontFamily="@font/inter_semibold"
        android:paddingStart="26dp"
        android:text="@string/patient"
        android:textColor="@color/gris_5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/patientList_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tasklist_description"
        android:layout_toEndOf="@+id/patientList_title"
        android:fontFamily="@font/inter_semibold"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="Sandra Castro J"
        android:textColor="@color/iris_100"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/priorityList_title"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@+id/patientList_title"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:paddingStart="26dp"
        android:text="@string/priority"
        android:textColor="@color/gris_5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/priorityList_description"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@+id/patientList_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/priorityList_title"
        android:background="@drawable/ic_priority_border"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text="Alta"
        android:textAllCaps="true"
        android:textColor="@color/gris_3"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/deadline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priorityList_title"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="26dp"
        android:text="@string/deadline"
        android:textColor="@color/gris_5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/deadline_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priorityList_title"
        android:layout_toEndOf="@+id/deadline_title"
        android:fontFamily="@font/inter_semibold"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Mañana"
        android:textColor="@color/iris_100"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/modeList_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priorityList_title"
        android:layout_toStartOf="@+id/modeList_description"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/mode"
        android:textColor="@color/gris_5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/modeList_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priorityList_title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/inter_semibold"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Presencial"
        android:textColor="@color/iris_100"
        android:textSize="12sp" />

    <View
        android:id="@+id/dividerList"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/modeList_title"
        android:layout_marginTop="15dp"
        android:background="@color/gris_3" />
</RelativeLayout>